--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
+#root,html,body {
+  margin: 0;
+  padding:0;
+  height: 100vh;
+  box-sizing: border-box;
+}
+
+.app{
+  height: 100%;
+  background:url('./images/BackImage.jpg');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card{
+  background-color: whitesmoke;
+  width: 40%;
+  height: 20%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+
+  border-radius: 20px;
+  padding: 2%;
+  box-shadow: 10px 10px 30px #34343488;
+
 }
 
-.App-link {
-  color: #61dafb;
+.heading {
+  display: flex;
+  align-items: center;
+  height: 500px;
+  font-family: 'League Spartan', sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/* button */
+.gmadv {
+  display: inline-block;
+  padding: 2%;
+  font-size: 18px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  color: grey;
+  background-color: #f0f0f0;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 6px 6px 12px #d9d9d9, -6px -6px 12px #ffffff;
+  cursor: pointer;
+}
+
+.gmadv:hover {
+  box-shadow: 4px 4px 8px #d9d9d9, -4px -4px 8px #ffffff;
+}
+
+.gmadv:active {
+  box-shadow: inset 4px 4px 8px #d9d9d9, inset -4px -4px 8px #ffffff;
+}
+
+
+@media only screen and(max-width: 600px){
+  .card {
+    width: 80%;
+    height: 30%;
   }
 }
+
