--- a/src/App.css
+++ b/src/App.css
@@ -4,56 +4,32 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(140deg,rgb(45, 45, 45),rgb(191, 191, 191));
+  background: linear-gradient(140deg,rgb(12, 12, 12),rgb(72, 72, 72));
 }
-
-.calculator{
-  padding: 20px;
-  border-radius: 10px;
-  background-color: white;
+body{
+  background: lightgray;
 }
-
-/* button */
-form input{
-  border: none;
-  width: 60px;
-  height: 60px;
-  padding: 16px;
-  font-size: 18px;
-  text-align: center;
-  text-decoration: none;
-  background-color: #f0f0f0;
-  border: none;
-  border-radius: 10px;
-  box-shadow: 6px 6px 12px #d9d9d9, -6px -6px 12px #ffffff;
-  cursor: pointer;
-  margin: 5px;
-  outline: 0;
-}
-
-form input[type="button"]:hover{
-  box-shadow: 4px 4px 8px #d9d9d9, -4px -4px 8px #ffffff;
-}
-
-form input[type="button"]:active{
-  box-shadow: inset 4px 4px 8px #d9d9d9, inset -4px -4px 8px #ffffff;
-}
-
-form .display{
+.heading{
+  color: lightgray;
   display: flex;
-  justify-content: flex-end;
-  margin: 5px 0px 20px 0px;
+  flex-direction: column;
 }
-form .display input {
-  text-align: right;
-  flex: 1;
-  font-size: 40px;
-  padding: 5px 10px;
-  background-color: gray;
-  color: white;
-}
-
-form input.equal{
-  width: 130px;
+.App{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  background-color: #36454F;
+  border-radius: 2%;
 }
 
+.calc-wrapper{
+  background-color: rgb(41, 41, 41);
+  width: 400px;
+  border-radius: 16px;
+}
+
+.row{
+  display: flex;
+}
