--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -11,3 +11,8 @@
     cursor: pointer;
   }
   
+  
+
+  .button-wrapper:active {
+    box-shadow: inset 4px 4px 8px #242424, inset -4px -4px 8px #949494;
+  }
